feat: fix entity selector